added icon for test purpose

--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.folioreader.ui.activity.FolioActivity"
-    tools:menu="@menu/menu_main">
+    tools:context="com.folioreader.ui.activity.FolioActivity">
 
     <com.folioreader.ui.view.DirectionalViewpager
         android:id="@+id/folioPageViewPager"
@@ -32,8 +31,7 @@
             android:layout_height="?android:attr/actionBarSize"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:contentInsetStartWithNavigation="0dp"
-            app:menu="@menu/menu_main"/>
+            app:contentInsetStartWithNavigation="0dp" />
 
     </com.folioreader.ui.view.FolioAppBarLayout>
 
