--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -52,4 +52,19 @@
 <!--        app:layout_constraintEnd_toEndOf="@+id/folioPageViewPager"-->
 <!--        tools:text="1" />-->
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"
+        android:tint="@color/black"
+        android:backgroundTint="@color/white"
+        android:padding="10dp"
+        android:contentDescription="Floating Action Button"
+        app:srcCompat="@drawable/ic_baseline_bookmark_border_24" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
