--- a/folioreader/res/menu/menu_main.xml
+++ b/folioreader/res/menu/menu_main.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.folioreader.ui.activity.FolioActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-<!--    <item-->
-<!--        android:id="@+id/itemBookmark"-->
-<!--        android:icon="@drawable/ic_baseline_bookmark_border_24"-->
-<!--        android:title="@string/menu_item_config"-->
-<!--        app:showAsAction="always"-->
-<!--        tools:showAsAction="always"-->
-<!--        android:onClick="goBackButtonClicked" />-->
+    <item
+        android:id="@+id/itemBookmark"
+        android:icon="@drawable/ic_baseline_bookmark_border_24"
+        android:title="@string/menu_item_config"
+        app:showAsAction="always"
+        tools:showAsAction="always"
+        android:onClick="goBackButtonClicked"
+        android:orderInCategory="0"/>
 
 <!--    <item-->
 <!--        android:id="@+id/itemSearch"-->
