--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -53,6 +53,7 @@
 <!--        tools:text="1" />-->
 
     <LinearLayout
+        android:id="@+id/main_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -89,6 +90,18 @@
             app:elevation="0dp"
             app:borderWidth="0dp"
             app:useCompatPadding="false" />
+
+        <TextView
+            android:id="@+id/app_bar_title"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:lines="1"
+            android:ellipsize="end"
+            android:singleLine="true"/>
 
         <!-- Space to push FABs to the right -->
         <View
