redesign as requird

--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -17,13 +17,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <com.folioreader.ui.view.FolioAppBarLayout-->
-<!--        android:id="@+id/folio_appBarLayout"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+    <com.folioreader.ui.view.FolioAppBarLayout
+        android:id="@+id/folio_appBarLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 <!--        <androidx.appcompat.widget.Toolbar-->
 <!--            android:id="@+id/folio_toolbar"-->
@@ -33,7 +33,7 @@
 <!--            app:contentInsetStart="0dp"-->
 <!--            app:contentInsetStartWithNavigation="0dp" />-->
 
-<!--    </com.folioreader.ui.view.FolioAppBarLayout>-->
+
 
 <!--    <TextView-->
 <!--        android:id="@+id/pageCount"-->
@@ -140,6 +140,7 @@
 
 
     </LinearLayout>
+        </com.folioreader.ui.view.FolioAppBarLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
