--- a/folioreader/res/layout/activity_content_highlight.xml
+++ b/folioreader/res/layout/activity_content_highlight.xml
@@ -66,15 +66,15 @@
                     android:text="@string/contents"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/btn_highlights"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/highlights"
-                    android:textSize="16sp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/btn_highlights"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:gravity="center"-->
+<!--                    android:padding="5dp"-->
+<!--                    android:text="@string/highlights"-->
+<!--                    android:textSize="16sp" />-->
 
                 <TextView
                     android:id="@+id/btn_bookmarks"
