--- a/folioreader/res/layout/dialog_bookmark.xml
+++ b/folioreader/res/layout/dialog_bookmark.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/bookmark_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corner_background"
