--- a/folioreader/res/layout/activity_content_highlight.xml
+++ b/folioreader/res/layout/activity_content_highlight.xml
@@ -6,10 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.folioreader.ui.activity.ContentHighlightActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
+        android:id="@+id/drawer_top_layout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/btn_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_margin="16dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/abc_vector_test"
+            android:tint="@color/black"/>
+    </LinearLayout>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/content_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:layout_margin="0dp"
         android:alpha="0.8"
         android:background="@color/white"
@@ -18,54 +35,48 @@
         app:contentInsetEnd="0dp"
         app:contentInsetLeft="0dp"
         app:contentInsetRight="0dp"
-        app:contentInsetStart="0dp">
+        app:contentInsetStart="0dp"
+        android:gravity="center"
+        android:layout_below="@+id/drawer_top_layout"
+        >
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/btn_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_margin="16dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/ic_close_green_24dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <LinearLayout
                 android:id="@+id/layout_content_highlights"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:orientation="horizontal"
-                android:padding="1.8dp">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/btn_contents"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:padding="5dp"
                     android:text="@string/contents"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/btn_highlights"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:text="@string/highlights"
-                    android:textSize="16sp" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/btn_highlights"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_weight="1"-->
+                <!--                    android:gravity="center"-->
+                <!--                    android:padding="5dp"-->
+                <!--                    android:text="@string/highlights"-->
+                <!--                    android:textSize="16sp" />-->
 
                 <TextView
                     android:id="@+id/btn_bookmarks"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:padding="5dp"
@@ -74,12 +85,12 @@
 
             </LinearLayout>
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_alignParentBottom="true"
-                android:background="@android:color/black" />
+            <!--            <View-->
+            <!--                android:id="@+id/view"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="0.5dp"-->
+            <!--                android:layout_alignParentBottom="true"-->
+            <!--                android:background="@android:color/black" />-->
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -87,5 +98,6 @@
         android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar" />
+        android:layout_below="@id/content_toolbar"
+        android:layout_marginTop="1dp" />
 </RelativeLayout>
