--- a/folioreader/res/layout/dialog_bookmark.xml
+++ b/folioreader/res/layout/dialog_bookmark.xml
@@ -9,9 +9,22 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/rounded_corner_background"
         android:padding="10dp"
         android:visibility="visible">
+
+        <TextView
+            android:id="@+id/book_mak_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Please give bookmark a name"
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <EditText
             android:id="@+id/bookmark_name"
@@ -26,6 +39,7 @@
             android:lines="1"
             android:padding="10dp"
             android:scrollbars="vertical"
+            android:layout_below="@+id/book_mak_title"
             android:textColor="@android:color/black" />
 
         <Button
@@ -34,10 +48,22 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/bookmark_name"
             android:layout_marginTop="8dp"
-            android:background="@color/default_theme_accent_color"
+            android:background="@drawable/rounded_button_background"
             android:text="@string/save_bookmark"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
+
+        <!-- Close Button -->
+        <ImageView
+            android:id="@+id/close_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/cross"
+            android:contentDescription="close"
+            android:clickable="true"
+            android:focusable="true" />
     </RelativeLayout>
 </RelativeLayout>
