--- a/folioreader/res/layout/row_table_of_contents.xml
+++ b/folioreader/res/layout/row_table_of_contents.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
@@ -17,5 +17,16 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
+        android:layout_marginStart="20dp"
         app:folio_font="SanFranciscoText-Regular.otf" />
-</LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/content_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/next_icon" />
+</RelativeLayout>
