--- a/folioreader/res/drawable/rounded.xml
+++ b/folioreader/res/drawable/rounded.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-<solid android:color="#E6101010" />
+<solid android:color="@color/white" />
 
 <corners
-    android:bottomLeftRadius="50dp"
-    android:topLeftRadius="50dp"
+    android:bottomLeftRadius="0dp"
+    android:topLeftRadius="8dp"
     android:bottomRightRadius="0dp"
-    android:topRightRadius="0dp" />
+    android:topRightRadius="8dp" />
 </shape>
