--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -87,14 +87,14 @@
                 android:layout_weight="1" />
 
             <!-- Floating Action Buttons aligned to the right -->
-            <ImageView
-                android:id="@+id/fab_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="10dp"
-                android:paddingLeft="10dp"
-                android:contentDescription="Book Mark Button"
-                app:srcCompat="@drawable/ic_baseline_bookmark_border_24"/>
+<!--            <ImageView-->
+<!--                android:id="@+id/fab_bookmark"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:paddingVertical="10dp"-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:contentDescription="Book Mark Button"-->
+<!--                app:srcCompat="@drawable/ic_baseline_bookmark_border_24"/>-->
 
             <ImageView
                 android:id="@+id/fab_font"
@@ -113,17 +113,19 @@
 
     <TextView
         android:id="@+id/pageCount"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/rounded"
+        android:layout_marginBottom="45dp"
         android:elevation="10dp"
         android:paddingStart="12dp"
         android:paddingTop="6dp"
         android:paddingEnd="10dp"
         android:paddingBottom="6dp"
-        android:textColor="#80FFFFFF"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/folioPageViewPager"
         app:layout_constraintEnd_toEndOf="@+id/folioPageViewPager"
         tools:text="1" />
