--- a/folioreader/src/main/assets/css/Style.css
+++ b/folioreader/src/main/assets/css/Style.css
@@ -39,10 +39,10 @@ html {
 
 body {
     margin: 0 !important;
-    padding: 100px 20px !important;
-	padding-bottom: 24px !important;
+    padding: 60px 25px !important;
+	padding-bottom: 25px !important;
     overflow: !important;
-}
+}s
 
 /* Custom padding for tablets */
 /*
